--- a/KisiselYapilacaklarApp.csproj
+++ b/KisiselYapilacaklarApp.csproj
@@ -65,7 +65,13 @@
   <ItemGroup>
     <Compile Include="AppSQLiteConnection.cs" />
     <Compile Include="BusinessLayer\Abstract\INoteManager.cs" />
+    <Compile Include="BusinessLayer\Abstract\IToDoListMonthManager.cs" />
+    <Compile Include="BusinessLayer\Abstract\IToDoListTodayManager.cs" />
+    <Compile Include="BusinessLayer\Abstract\IToDoListWeekManager.cs" />
     <Compile Include="BusinessLayer\Concrete\NoteManager.cs" />
+    <Compile Include="BusinessLayer\Concrete\ToDoListMonthManager.cs" />
+    <Compile Include="BusinessLayer\Concrete\ToDoListTodayManager.cs" />
+    <Compile Include="BusinessLayer\Concrete\ToDoListWeekManager.cs" />
     <Compile Include="DataAccessLayer\Abstract\INoteDal.cs" />
     <Compile Include="DataAccessLayer\Abstract\IToDoListMonthDal.cs" />
     <Compile Include="DataAccessLayer\Abstract\IToDoListTodayDal.cs" />
@@ -92,6 +98,12 @@
     </Compile>
     <Compile Include="Screens\FrmNote.Designer.cs">
       <DependentUpon>FrmNote.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\FrmNoteAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\FrmNoteAdd.Designer.cs">
+      <DependentUpon>FrmNoteAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Screens\FrmToDoMonth.cs">
       <SubType>Form</SubType>
@@ -125,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\FrmNote.resx">
       <DependentUpon>FrmNote.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\FrmNoteAdd.resx">
+      <DependentUpon>FrmNoteAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\FrmToDoMonth.resx">
       <DependentUpon>FrmToDoMonth.cs</DependentUpon>
